--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="min-h-screen flex items-center justify-center p-6">
   <div class="max-w-4xl w-full" x-data="app()">
     <h1 class="text-4xl font-bold text-center mb-12 text-gray-800 text-center">
-      Alege brandul dorit
+      MOTOLAND
     </h1>
 
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
