--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <body class="min-h-screen flex items-center justify-center p-6">
   <div class="max-w-4xl w-full" x-data="app()">
-    <h1 class="text-4xl font-bold text-center mb-12 text-gray-800 text-center">
-      MOTOLAND
-    </h1>
+<div class="text-center mb-12">
+  <a href="https://motoland.ro" target="_blank">
+    <img src="logos/logo.svg" 
+         alt="MOTOLAND - Magazin piese & accesorii moto"
+         class="mx-auto h-20 md:h-28 lg:h-32 object-contain drop-shadow-lg hover:drop-shadow-2xl transition-all">
+  </a>
+</div>
 
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
       <template x-for="brand in brands" :key="brand.name">
