--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="min-h-screen flex items-center justify-center p-6">
   <div class="max-w-4xl w-full" x-data="app()">
 <div class="text-center mb-12">
-  <a href="https://motoland.ro" target="_blank">
+  <a href="https://motoland.md" target="_blank">
     <img src="logos/logo.svg" 
          alt="MOTOLAND - Magazin piese & accesorii moto"
          class="mx-auto h-20 md:h-28 lg:h-32 object-contain drop-shadow-lg hover:drop-shadow-2xl transition-all">
