--- a/price.html
+++ b/price.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ro" class="h-full bg-gray-50">
+<html lang="ro" class="h-full">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,101 +8,97 @@
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link rel="icon" href="data:,">
 </head>
-<body class="min-h-screen flex flex-col">
-  <!-- Header cu logo MOTOLAND -->
-  <header class="bg-white shadow-sm border-b border-gray-200">
-    <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-center md:justify-between">
-      <div class="flex items-center space-x-3">
-        <img src="logos/logo.svg" alt="MOTOLAND Logo" class="h-12 w-auto">
-        <span class="text-2xl font-bold text-gray-800 hidden md:block">MOTOLAND</span>
-      </div>
-    </div>
+<body class="min-h-screen bg-gradient-to-b from-purple-50 to-white flex flex-col">
+
+  <!-- Header minimalist cu logo -->
+  <header class="py-6 text-center">
+    <img src="logos/logo.svg" alt="MOTOLAND" class="h-12 mx-auto">
   </header>
 
-  <!-- Conținut principal -->
-  <main class="flex-1 flex items-center justify-center p-6 bg-gradient-to-b from-purple-50 to-white">
-    <div class="max-w-2xl w-full" x-data="priceApp()">
-      <div class="text-center mb-12">
-        <h1 class="text-5xl font-black text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-700 mb-6">
-          Căutare Prețuri Piese
-        </h1>
-        <p class="text-gray-600 text-lg mb-10">Introdu codul piesei pentru preț instant</p>
-        
-        <!-- Search box exact ca în poza ta -->
-        <div class="bg-white rounded-3xl shadow-2xl p-8 border border-gray-100">
-          <form @submit.prevent="searchByCode">
-            <div class="relative mb-6">
-              <input 
-                type="text" 
-                x-model="searchCode" 
-                placeholder="ex: 6A0V-04002-1001-0VP00"
-                class="w-full px-6 py-5 text-lg border-2 border-red-500 rounded-2xl focus:border-blue-600 focus:outline-none transition-colors"
-                autofocus
-              >
-            </div>
-            <button 
-              type="submit"
-              class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 px-8 rounded-2xl text-xl transition-all duration-300 flex items-center justify-center space-x-3 shadow-lg hover:shadow-xl"
-            >
-              <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-              </svg>
-              <span>Caută</span>
-            </button>
-          </form>
-        </div>
+  <main class="flex-1 flex items-start justify-center px-4 pt-8 pb-20">
+    <div class="w-full max-w-2xl" x-data="priceSearch()">
+
+      <!-- Titlu + subtitlu -->
+      <h1 class="text-5xl font-black text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 text-center mb-3">
+        Căutare Prețuri Piese
+      </h1>
+      <p class="text-center text-gray-600 mb-10">Introdu codul piesei pentru preț instant</p>
+
+      <!-- Search Box exact ca în poză -->
+      <div class="bg-white rounded-3xl shadow-2xl p-8 mb-12">
+        <form @submit.prevent>
+          <input 
+            type="text"
+            x-model="query"
+            placeholder="ex: amortizor thunder, lant 520, placute cbr, ulei 10w40..."
+            class="w-full px-6 py-5 text-lg border-2 border-red-500 rounded-2xl focus:outline-none focus:border-blue-600 transition-colors"
+            autofocus
+          >
+          <button 
+            @click="query = query" 
+            class="mt-6 w-full bg-blue-600 hover:bg-blue-700 text-white font-bold text-xl py-5 rounded-2xl flex items-center justify-center gap-3 shadow-lg"
+          >
+            <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+            </svg>
+            Caută
+          </button>
+        </form>
       </div>
 
-      <!-- Rezultate (cards ca în fiches.html) -->
-      <div class="grid gap-6 mt-10" x-show="results.length > 0">
+      <!-- Rezultate – cards identice cu poza ta -->
+      <div class="space-y-6">
         <template x-for="item in results" :key="item.name">
-          <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl p-8 border border-gray-100 transition-all group">
-            <h3 class="text-xl font-semibold text-gray-800 text-center mb-4" x-text="item.name"></h3>
-            <div class="text-center">
-              <span class="text-4xl font-black text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600"
-                    x-text="formatPrice(item.price)"></span>
-              <span class="text-2xl text-gray-600 ml-2">lei</span>
-            </div>
-            <p class="text-center text-gray-500 mt-3 text-sm">
-              Cod: <span x-text="item.code || '—'"></span>
-            </p>
+          <div class="bg-white rounded-3xl shadow-xl p-8 text-center hover:shadow-2xl transition-shadow">
+            <h3 class="text-xl font-bold text-gray-800 mb-4" x-text="item.name"></h3>
+            <div class="text-5xl font-black text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 mb-2"
+                 x-text="formatPrice(item.price)"></div>
+            <p class="text-lg text-gray-600">lei</p>
+            <p class="text-sm text-gray-400 mt-3">Cod: <span x-text="item.code || '—'"></span></p>
           </div>
         </template>
       </div>
 
       <!-- No results -->
-      <div x-show="results.length === 0 && searched" class="text-center py-16">
-        <p class="text-2xl text-gray-500">Niciun rezultat găsit</p>
-        <p class="text-gray-400 mt-2">Verifică codul introdus și încearcă din nou</p>
+      <div x-show="query && results.length === 0" class="text-center py-16">
+        <p class="text-2xl text-gray-500 font-medium">Niciun rezultat găsit</p>
+        <p class="text-gray-400 mt-2">Verifică scrierea și încearcă din nou</p>
       </div>
+
     </div>
   </main>
 
   <script>
-    function priceApp() {
+    function priceSearch() {
       return {
-        searchCode: '',
-        results: [],
-        searched: false,
+        query: '',
         allItems: [],
+        results: [],
 
-        async init() {
-          try {
-            const res = await fetch('price.json?t=' + Date.now());
-            this.allItems = await res.json();
-          } catch (e) {
-            console.error('Eroare încărcare prețuri:', e);
-          }
+        init() {
+          fetch('price.json?t=' + Date.now())
+            .then(r => r.json())
+            .then(data => {
+              this.allItems = data;
+              this.$watch('query', () => this.search());
+            })
+            .catch(() => alert('Eroare încărcare prețuri'));
         },
 
-        searchByCode() {
-          if (!this.searchCode.trim()) return;
-          this.searched = true;
-          const term = this.searchCode.toLowerCase().trim();
-          this.results = this.allItems.filter(item =>
-            (item.code && item.code.toLowerCase().includes(term)) ||
-            item.name.toLowerCase().includes(term)
-          );
+        search() {
+          if (!this.query.trim()) {
+            this.results = [];
+            return;
+          }
+
+          const terms = this.query.toLowerCase().trim().split(/\s+/);
+
+          this.results = this.allItems
+            .filter(item => {
+              const text = (item.name + ' ' + (item.code || '')).toLowerCase();
+              return terms.every(term => text.includes(term));
+            })
+            .slice(0, 200); // max 50 rezultate ca să nu încarce
         },
 
         formatPrice(price) {
