--- a/price.html
+++ b/price.html
@@ -18,7 +18,7 @@
     <div x-data="priceSearch()">
 
       <h1 class="text-3xl font-bold text-gray-800 text-center mb-2">
-        Căutare Prețuri Piese
+        Căutare Prețuri Piese China & Agro
       </h1>
       <p class="text-center text-gray-600 mb-8 text-sm">
         Scrie câteva cuvinte din denumire (ex: amortizor thunder, lant 520, placute)
