--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8">
       <template x-for="brand in brands" :key="brand.name">
-        <a :href="brand.link" target="_blank"
+        <a :href="brand.link"
            class="group block transform hover:scale-105 transition-all duration-300">
           <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl p-8 flex flex-col items-center justify-center h-48 border border-gray-100">
             <img :src="brand.logo" 
